--- a/index.html
+++ b/index.html
@@ -1,15 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Calculator</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Calculator</title>
 </head>
 <body>
+	<div id="calculator-shell">
+		<div id="display"></div>
+		
+		<div id="button-container">
+			<div class="row">
+				<button id="clear">AC</button>
+				<button id="decimal">+/-</button>
+				<button id="back">C</button>
+				<button id="/">/</button>
+			</div>
+			<div class="row">
+				<button id="7">7</button>
+				<button id="8">8</button>
+				<button id="9">9</button>
+				<button id="*">*</button>
+			</div>
+			<div class="row">
+				<button id="4">4</button>
+				<button id="5">5</button>
+				<button id="6">6</button>
+				<button id="-">-</button>
+			</div>
+			<div class="row">
+				<button id="1">1</button>
+				<button id="2">2</button>
+				<button id="3">3</button>
+				<button id="+">+</button>
+			</div>
+			<div class="row">
+				<button id="0">0</button>
+				<button id=".">.</button>
+				<button id="equals">=</button>
+			</div>
+		</div>
+	</div>
 
-
-    
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
