Add function to display input text

--- a/index.html
+++ b/index.html
@@ -8,36 +8,38 @@
 </head>
 <body>
 	<div id="calculator-shell">
-		<div id="display"></div>
+		<div id="display-container">
+			<p id="display"></p>
+		</div>
 		
 		<div id="button-container">
 			<div class="row">
 				<button id="clear">AC</button>
 				<button id="decimal">+/-</button>
 				<button id="back">C</button>
-				<button id="/">/</button>
+				<button id="/" class="displayable">/</button>
 			</div>
 			<div class="row">
-				<button id="7">7</button>
-				<button id="8">8</button>
-				<button id="9">9</button>
-				<button id="*">*</button>
+				<button id="7" class="displayable">7</button>
+				<button id="8" class="displayable">8</button>
+				<button id="9" class="displayable">9</button>
+				<button id="*" class="displayable">*</button>
 			</div>
 			<div class="row">
-				<button id="4">4</button>
-				<button id="5">5</button>
-				<button id="6">6</button>
-				<button id="-">-</button>
+				<button id="4" class="displayable">4</button>
+				<button id="5" class="displayable">5</button>
+				<button id="6" class="displayable">6</button>
+				<button id="-" class="displayable">-</button>
 			</div>
 			<div class="row">
-				<button id="1">1</button>
-				<button id="2">2</button>
-				<button id="3">3</button>
-				<button id="+">+</button>
+				<button id="1" class="displayable">1</button>
+				<button id="2" class="displayable">2</button>
+				<button id="3" class="displayable">3</button>
+				<button id="+" class="displayable">+</button>
 			</div>
 			<div class="row">
-				<button id="0">0</button>
-				<button id=".">.</button>
+				<button id="0" class="displayable">0</button>
+				<button id="." class="displayable">.</button>
 				<button id="equals">=</button>
 			</div>
 		</div>
