Add function to display equation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 	<div id="calculator-shell">
 		<div id="display-container">
-			<p id="display"></p>
+			<p id="full-equation"></p>
+			<p id="immediate-text"></p>
 		</div>
 		
 		<div id="button-container">
@@ -17,29 +18,29 @@
 				<button id="clear">AC</button>
 				<button id="decimal">+/-</button>
 				<button id="back">C</button>
-				<button id="/" class="displayable">/</button>
+				<button id="/" class="operator">/</button>
 			</div>
 			<div class="row">
-				<button id="7" class="displayable">7</button>
-				<button id="8" class="displayable">8</button>
-				<button id="9" class="displayable">9</button>
-				<button id="*" class="displayable">*</button>
+				<button id="7" class="number">7</button>
+				<button id="8" class="number">8</button>
+				<button id="9" class="number">9</button>
+				<button id="*" class="operator">*</button>
 			</div>
 			<div class="row">
-				<button id="4" class="displayable">4</button>
-				<button id="5" class="displayable">5</button>
-				<button id="6" class="displayable">6</button>
-				<button id="-" class="displayable">-</button>
+				<button id="4" class="number">4</button>
+				<button id="5" class="number">5</button>
+				<button id="6" class="number">6</button>
+				<button id="-" class="operator">-</button>
 			</div>
 			<div class="row">
-				<button id="1" class="displayable">1</button>
-				<button id="2" class="displayable">2</button>
-				<button id="3" class="displayable">3</button>
-				<button id="+" class="displayable">+</button>
+				<button id="1" class="number">1</button>
+				<button id="2" class="number">2</button>
+				<button id="3" class="number">3</button>
+				<button id="+" class="operator">+</button>
 			</div>
 			<div class="row">
-				<button id="0" class="displayable">0</button>
-				<button id="." class="displayable">.</button>
+				<button id="0" class="number">0</button>
+				<button id="." class="number">.</button>
 				<button id="equals">=</button>
 			</div>
 		</div>
