Add feat evaluates on extra operator input

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div id="calculator-shell">
 		<div id="display-container">
-			<p id="full-equation"></p>
+			<!-- <p id="full-equation"></p> -->
 			<p id="immediate-text"></p>
 		</div>
 		
