--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
 <body>
 	<div id="calculator-shell">
 		<div id="display-container">
-			<!-- <p id="full-equation"></p> -->
 			<p id="immediate-text"></p>
 		</div>
 		
 		<div id="button-container">
 			<div class="row">
+				<button id="back"><=</button>
 				<button id="clear">AC</button>
-				<button id="decimal">+/-</button>
-				<button id="back">C</button>
+				<button id="backSpace">+/-</button>
 				<button id="/" class="operator">/</button>
 			</div>
 			<div class="row">
