Add feat backspace

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		
 		<div id="button-container">
 			<div class="row">
-				<button id="back"><=</button>
+				<button id="backSpace"><=</button>
 				<button id="clear">AC</button>
-				<button id="backSpace">+/-</button>
+				<button id="negative">+/-</button>
 				<button id="/" class="operator">/</button>
 			</div>
 			<div class="row">
